Builds now. lol.

--- a/build.xml
+++ b/build.xml
@@ -145,7 +145,7 @@
         <java classname="${tests}.TestAll"
             classpath="${build}:${tools}/beaver.jar:tools/junit.jar"
             fork="true" dir="${build}">
-            <arg value="-text"/>
+            <arg value=""/>
         </java>
     </target>
 
